# bisturi

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  README.md  go.mod  main.go
.claude/commands/: bisturi.md  ctx-cut.md
.github/workflows/: ci.yml  release.yml
attic/python/: bisturi  pyproject.toml
attic/python/ctxbisturi/: __init__.py  session.py  tui.py
ctxbisturi/: cli.py  storage.py
internal/app/: app.go  app_test.go  picker.go  tty.go  tui.go  tui_test.go  write.go
internal/session/: discover.go  discover_test.go  session.go  session_test.go  title.go  title_test.go
internal/surgery/: compact_test.go  store.go  store_test.go
tests/: test_session.py
